--- a/crates/evm/traces/Cargo.toml
+++ b/crates/evm/traces/Cargo.toml
@@ -35,16 +35,17 @@ revm-inspectors.workspace = true
 eyre.workspace = true
 futures.workspace = true
 itertools.workspace = true
-serde.workspace = true
+memchr.workspace = true
+rayon.workspace = true
+reqwest.workspace = true
+revm.workspace = true
 serde_json.workspace = true
+serde.workspace = true
+solar.workspace = true
+tempfile.workspace = true
 tokio = { workspace = true, features = ["time", "macros"] }
 tracing.workspace = true
-tempfile.workspace = true
-rayon.workspace = true
-solar.workspace = true
-revm.workspace = true
 yansi.workspace = true
-memchr.workspace = true
 
 [dev-dependencies]
 tempfile.workspace = true
