--- a/crates/evm/traces/Cargo.toml
+++ b/crates/evm/traces/Cargo.toml
@@ -32,6 +32,7 @@ alloy-primitives = { workspace = true, features = [
 alloy-sol-types.workspace = true
 revm-inspectors.workspace = true
 
+async-trait.workspace = true
 eyre.workspace = true
 futures.workspace = true
 itertools.workspace = true
@@ -39,7 +40,7 @@ memchr.workspace = true
 rayon.workspace = true
 reqwest.workspace = true
 revm.workspace = true
-serde_json.workspace = true
+serde_json = { workspace = true, features = ["raw_value"] }
 serde.workspace = true
 solar.workspace = true
 tempfile.workspace = true
