fix: handle empty receipt when transactions are discarded by RPCs (#10457)
* Update progress.rs

* Update receipts.rs

* Update receipts.rs

* Update progress.rs

* Update receipts.rs

* Update progress.rs

* Update receipts.rs

* Update progress.rs

* Update Cargo.toml

* Update progress.rs

* Update coverage.rs

* Update vanity.rs

* Update progress.rs

* Update receipts.rs

--- a/crates/script/Cargo.toml
+++ b/crates/script/Cargo.toml
@@ -54,6 +54,7 @@ alloy-dyn-abi.workspace = true
 alloy-primitives.workspace = true
 alloy-eips.workspace = true
 alloy-consensus.workspace = true
+thiserror.workspace = true
 
 [dev-dependencies]
 tempfile.workspace = true
