--- a/testdata/foundry.toml
+++ b/testdata/foundry.toml
@@ -1,14 +1,30 @@
 [profile.default]
-src = "./"
+src = "/dev/null"
 test = "./"
-solc = "0.8.18"
-evm_version = "paris"
-ffi = false
+optimizer = true
+optimizer_runs = 200
+via_ir = true
+ignored_error_codes = [
+    1878, # SPDX license identifier not provided
+    2018, # Function state mutability can be restricted
+    3860, # Contract init code size exceeds limit
+    5574, # Contract code size exceeds limit
+]
+
+ffi = true
 fs_permissions = [{ access = "read-write", path = "./" }]
+# verbosity = 3
+prompt_timeout = 1
+
+# TODO(dani): stack too deep
+skip = ["default/repros/Issue8383.t.sol"]
 
 [profile.default.rpc_storage_caching]
 chains = "all"
 endpoints = "all"
+
+[profile.default.invariant]
+depth = 15
 
 [fmt]
 ignore = ["cheats/Vm.sol"]
