--- a/crates/cheatcodes/Cargo.toml
+++ b/crates/cheatcodes/Cargo.toml
@@ -25,6 +25,8 @@ foundry-evm-traces.workspace = true
 foundry-wallets.workspace = true
 forge-script-sequence.workspace = true
 
+solar.workspace = true
+
 alloy-dyn-abi.workspace = true
 alloy-evm.workspace = true
 alloy-json-abi.workspace = true
