--- a/.github/workflows/nextest.yml
+++ b/.github/workflows/nextest.yml
@@ -96,7 +96,9 @@ jobs:
           path: |
             ~/.foundry/cache
             ~/.config/.foundry/cache
-          key: rpc-cache-${{ hashFiles('crates/forge/tests/rpc-cache-keyfile') }}
+            testdata/cache
+            testdata/out
+          key: ${{ runner.os }}-foundry
       - uses: mozilla-actions/sccache-action@7d986dd989559c6ecdb630a3fd2557667be217ad # v0.0.9
       - name: Setup Git config
         run: |
