anvil-polkadot: add impersonation (#332)
* anvil-polkadot(impersonation): add impersonate...

...account RPC

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot(tests): add tracing support

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot(misc): fix warnings

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot: polish logging

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot(impersonation): add impersonate...

...account test

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot(impersonation): testing all impersonation RPCs

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot(impersonation): polish test

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot: customize addr recovery in ReceiptExtractor

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot: point to custom polkadot-sdk

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot: fix impersonation test

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* Cargo.lock: update to latest custom polkadot-sdk

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot: update ReceiptExtractor constructor usage

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot(tests): refactor send_transaction

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot: fix comments and revert newlines

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* foundry-cli: revert change

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* Cargo.lock: fix unwanted crates updates

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot(tests): assert tx failure when auto impersonation is false

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot: rename cheats manager to impersonation

Also created the impersonation manager accounting for the
`enable_auto_impersonate` anvil confi

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ result_large_err = "allow"
 redundant_imports = "warn"
 redundant-lifetimes = "warn"
 rust-2018-idioms = "warn"
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(substrate_runtime)'] }
 unused-must-use = "warn"
 # unreachable-pub = "warn"
 
