--- a/.github/workflows/nextest.yml
+++ b/.github/workflows/nextest.yml
@@ -90,7 +90,7 @@ jobs:
         # Also update vyper version in .devcontainer/Dockerfile.dev
         run: pip --version && pip install vyper==0.4.3
 
-      - name: Forge RPC cache
+      - name: Foundry test cache
         uses: actions/cache@v4
         with:
           path: |
@@ -98,7 +98,7 @@ jobs:
             ~/.config/.foundry/cache
             testdata/cache
             testdata/out
-          key: ${{ runner.os }}-foundry
+          key: ${{ runner.os }}-foundry-${{ matrix.name }}
       - uses: mozilla-actions/sccache-action@7d986dd989559c6ecdb630a3fd2557667be217ad # v0.0.9
       - name: Setup Git config
         run: |
