Create a ChainSpec Wrapper to manage Anvil genesis config (#293)
* draft chainspec wrapper

* inject Anvil Node Config into Substrate CLI

* Set chain_id from config.json

* Add extra fields

* inject storage items into ChainSpec

* implement ChainSpec trait for wrapper

* fix clippy

* CR reorg

* set System::Number as u32

* nit

* nit

* Add genesis timestamp to time manager of mining node

* add custom genesis block number support in RPC

* fmt

* fmt

* clippy + comments

* CR nits + reorg

* Add genesis integration tests (chain ID missing)

* comment nit

Co-authored-by: Alin Dima <alindima99@pm.me>

* add chain id test

* fix time manager creation

* changed genesis milliseconds mismatch + clippy for unused import

* undo clippy change

* merge fix - missing import

* fix rpc client creation

* clippy nit

* fix

* CR fixes

* fix types

* nit

* Use genesis block number to compute genesis hash

* improve error handling

* fix metadata retrieval

* use the impersonation executor

* use latest available metadata + error handling

* add Chain Id RPC

* nit

* fmt + clippy

* add `InternalError` variant

* make test less flaky

* fix test with chain id RPC

* Use chain id RPC in genesis tests

* fix deny license

---------

Co-authored-by: Alin Dima <alindima99@pm.me>
Co-authored-by: alindima <alin@parity.io>

--- a/crates/anvil-polkadot/Cargo.toml
+++ b/crates/anvil-polkadot/Cargo.toml
@@ -19,6 +19,7 @@ path = "bin/main.rs"
 
 [dependencies]
 # foundry internal
+codec = { version = "3.7.5", default-features = true, package = "parity-scale-codec" }
 substrate-runtime = { path = "substrate-runtime" }
 secp256k1 = { version = "0.28.0", default-features = false }
 libsecp256k1 = { version = "0.7.0", default-features = false }
@@ -37,13 +38,16 @@ polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch 
 	"sc-executor-common",
 	"sc-executor-wasmtime",
 	"sc-keystore",
+	"sc-network",
 	"sc-network-types",
     "sc-rpc",
 	"sc-rpc-api",
 	"sc-rpc-server",
 	"sc-rpc-spec-v2",
+	"sc-runtime-utilities",
 	"sc-service",
 	"sc-state-db",
+	"sc-telemetry",
 	"sc-tracing",
 	"sc-transaction-pool",
 	"sc-transaction-pool-api",
@@ -131,10 +135,10 @@ clap = { version = "4", features = [
 clap_complete = { version = "4" }
 chrono.workspace = true
 clap_complete_fig = "4"
-parity-scale-codec = "3.7.5"
 subxt = "0.43.0"
 subxt-signer = "0.43.0"
 tokio-stream = "0.1.17"
+jsonrpsee = "0.24.9"
 sqlx = "0.8.6"
 
 [dev-dependencies]
