--- a/crates/wallets/Cargo.toml
+++ b/crates/wallets/Cargo.toml
@@ -38,6 +38,7 @@ derive_builder = "0.20"
 eyre.workspace = true
 rpassword = "7"
 serde.workspace = true
+serde_json.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
 eth-keystore = "0.5.0"
