--- a/Cargo.toml
+++ b/Cargo.toml
@@ -282,11 +282,11 @@ op-alloy-flz = "0.13.1"
 
 ## revm
 revm = { version = "30.1.0", default-features = false }
-revm-inspectors = { version = "0.30.0", features = ["serde"] }
+revm-inspectors = { version = "0.31.0", features = ["serde"] }
 op-revm = { version = "11.0.0", default-features = false }
 ## alloy-evm
-alloy-evm = "0.21.1"
-alloy-op-evm = "0.21.1"
+alloy-evm = "0.22.1"
+alloy-op-evm = "0.22.1"
 
 ## cli
 anstream = "0.6"
@@ -430,13 +430,13 @@ rexpect = { git = "https://github.com/rust-cli/rexpect", rev = "2ed0b1898d7edaf6
 # alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "7fab7ee" }
 
 ## alloy-evm
-alloy-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "085ad53" }
-alloy-op-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "085ad53" }
+# alloy-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "085ad53" }
+# alloy-op-evm = { git = "https://github.com/alloy-rs/evm.git", rev = "085ad53" }
 
 ## revm
 # revm = { git = "https://github.com/bluealloy/revm.git", rev = "d9cda3a" }
 # op-revm = { git = "https://github.com/bluealloy/revm.git", rev = "d9cda3a" }
-revm-inspectors = { git = "https://github.com/zerosnacks/revm-inspectors.git", rev = "340d37e" }
+# revm-inspectors = { git = "https://github.com/zerosnacks/revm-inspectors.git", rev = "340d37e" }
 
 ## foundry
 # foundry-block-explorers = { git = "https://github.com/foundry-rs/block-explorers.git", rev = "f5b46b2" }
