feat(cheats): get profile artifacts metadata

--- a/crates/cheatcodes/Cargo.toml
+++ b/crates/cheatcodes/Cargo.toml
@@ -67,3 +67,6 @@ tracing.workspace = true
 walkdir.workspace = true
 proptest.workspace = true
 serde.workspace = true
+
+[dev-dependencies]
+tempfile.workspace = true
