--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
     executor: my-custom-executor
     steps:
       - checkout
+      - run: echo "Build started"
       - run: |
           # echo Hello, World!
 
