--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -147,7 +147,7 @@ jobs:
         run: ./.github/scripts/format.sh --check
 
   crate-checks:
-    runs-on: depot-ubuntu-latest
+    runs-on: depot-ubuntu-latest-16
     timeout-minutes: 30
     permissions:
       contents: read
