ci: re-add rust-cache

--- a/.github/workflows/nextest.yml
+++ b/.github/workflows/nextest.yml
@@ -56,8 +56,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix: ${{ fromJson(needs.matrices.outputs.test-matrix) }}
-    env:
-      CARGO_PROFILE_DEV_DEBUG: 0
     steps:
       - uses: actions/checkout@v5
         with:
@@ -103,6 +101,7 @@ jobs:
           restore-keys: |
             foundry-${{ matrix.name }}-
       - uses: mozilla-actions/sccache-action@7d986dd989559c6ecdb630a3fd2557667be217ad # v0.0.9
+      - uses: Swatinem/rust-cache@f13886b937689c021905a6b90929199931d60db1 # v2
       - name: Setup Git config
         run: |
           git config --global user.name "GitHub Actions Bot"
