ci: enable bun on Windows
I think this was initially disabled because Bun did not yet support
Windows.

--- a/.github/workflows/nextest.yml
+++ b/.github/workflows/nextest.yml
@@ -78,7 +78,7 @@ jobs:
         with:
           node-version: 24
       - name: Install Bun
-        if: contains(matrix.name, 'external') && !contains(matrix.runner_label, 'windows')
+        if: contains(matrix.name, 'external')
         uses: oven-sh/setup-bun@735343b667d3e6f658f44d0eca948eb6282f2b76 # v2
         with:
           bun-version: latest
