--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,8 +47,10 @@ jobs:
         env:
           RUSTDOCFLAGS: --cfg docsrs -D warnings --show-type-layout --generate-link-to-definition --enable-index-page -Zunstable-options
       - name: Setup Pages
+        if: github.ref_name == 'master' && github.event_name == 'push'
         uses: actions/configure-pages@v5
       - name: Upload artifact
+        if: github.ref_name == 'master' && github.event_name == 'push'
         uses: actions/upload-pages-artifact@v4
         with:
           path: ./target/doc
