ci: rename nextest.yml to test.yml

--- a/.github/workflows/test-isolate.yml
+++ b/.github/workflows/test-isolate.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   nextest:
-    uses: ./.github/workflows/nextest.yml
+    uses: ./.github/workflows/test.yml
     permissions:
       contents: read
     with:
