--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ env:
   RUSTC_WRAPPER: "sccache"
 
 jobs:
-  nextest:
-    uses: ./.github/workflows/nextest.yml
+  test:
+    uses: ./.github/workflows/test.yml
     permissions:
       contents: read
     with:
