--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -211,7 +211,7 @@ jobs:
     if: always()
     permissions: {}
     needs:
-      - nextest
+      - test
       - docs
       - doctest
       - typos
