anvil-polkadot: add chain reversion RPCs (#336)
* anvil-polkadot: add snapshot manager & evm snapshot RPC

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* cargo: format toml & lock

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* Revert "cargo: format toml & lock"

This reverts commit 22d3d3624a8920d61ebf65a03b4207f2efe9d2b1.

* evm_revert: wip debug test failure

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot: seal best blocks only

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot: test snapshot and revert

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* tomls: update formatting and polkadot-sdk dep

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot: revert uneeded changes

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* Update crates/revive-env/Cargo.toml

* Update crates/revive-strategy/Cargo.toml

* anvil-polkadot: update block provider best block after revert

Also set the finalized manual seal param to true for experiments.

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot: set db pruning to archive

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot: impl rollback & add tests

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot(tests): add todos for block provider testing

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot(tests): finalize existing tests

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot: update evm_revert & anvil-rollback return type

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot(tests): add revert and txs in mempool test

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot: code polish

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot(tests): fix timestmap with evm revert test

Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

* anvil-polkadot(tests): final polish

Signed-of

--- a/crates/anvil-polkadot/Cargo.toml
+++ b/crates/anvil-polkadot/Cargo.toml
@@ -21,6 +21,7 @@ path = "bin/main.rs"
 # foundry internal
 codec = { version = "3.7.5", default-features = true, package = "parity-scale-codec" }
 substrate-runtime = { path = "substrate-runtime" }
+pallet-revive-eth-rpc = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master" }
 secp256k1 = { version = "0.28.0", default-features = false }
 libsecp256k1 = { version = "0.7.0", default-features = false }
 sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
@@ -64,7 +65,6 @@ polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch 
 	"substrate-frame-rpc-system",
 	"substrate-rpc-client",
 	"substrate-wasm-builder",
-	"pallet-revive-eth-rpc"
 ] }
 anvil.workspace = true
 anvil-core.workspace = true
