anvil-polkadot: added AURA based FindAuthor impl
Signed-off-by: Iulian Barbu <iulian.barbu@parity.io>

--- a/crates/anvil-polkadot/Cargo.toml
+++ b/crates/anvil-polkadot/Cargo.toml
@@ -26,7 +26,7 @@ secp256k1 = { version = "0.28.0", default-features = false }
 libsecp256k1 = { version = "0.7.0", default-features = false }
 sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
 polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false, features = [
-    "sc-allocator",
+	"sc-allocator",
 	"sc-basic-authorship",
 	"sc-block-builder",
 	"sc-chain-spec",
@@ -34,14 +34,15 @@ polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch 
 	"sc-client-api",
 	"sc-client-db",
 	"sc-consensus",
+	"sc-consensus-aura",
 	"sc-consensus-manual-seal",
-    "sc-executor",
+	"sc-executor",
 	"sc-executor-common",
 	"sc-executor-wasmtime",
 	"sc-keystore",
 	"sc-network",
 	"sc-network-types",
-    "sc-rpc",
+	"sc-rpc",
 	"sc-rpc-api",
 	"sc-rpc-server",
 	"sc-rpc-spec-v2",
@@ -55,13 +56,14 @@ polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch 
 	"sc-utils",
 	"sp-blockchain",
 	"sp-consensus",
+	"sp-consensus-slots",
 	"sp-core-hashing",
 	"sp-core-hashing-proc-macro",
 	"sp-database",
 	"sp-panic-handler",
 	"sp-rpc",
 	"std",
-    "substrate-frame-rpc-support",
+	"substrate-frame-rpc-support",
 	"substrate-frame-rpc-system",
 	"substrate-rpc-client",
 	"substrate-wasm-builder",
@@ -88,11 +90,11 @@ alloy-dyn-abi = { workspace = true, features = ["std", "eip712"] }
 alloy-rpc-types = { workspace = true, features = ["anvil", "trace", "txpool"] }
 alloy-serde.workspace = true
 alloy-provider = { workspace = true, features = [
-    "reqwest",
-    "ws",
-    "ipc",
-    "debug-api",
-    "trace-api",
+	"reqwest",
+	"ws",
+	"ipc",
+	"debug-api",
+	"trace-api",
 ] }
 alloy-transport.workspace = true
 alloy-chains.workspace = true
@@ -128,11 +130,7 @@ eyre.workspace = true
 lru = "0.16.0"
 
 # cli
-clap = { version = "4", features = [
-    "derive",
-    "env",
-    "wrap_help",
-] }
+clap = { version = "4", features = ["derive", "env", "wrap_help"] }
 clap_complete = { version = "4" }
 chrono.workspace = true
 clap_complete_fig = "4"
