--- a/crates/anvil-polkadot/substrate-runtime/Cargo.toml
+++ b/crates/anvil-polkadot/substrate-runtime/Cargo.toml
@@ -13,6 +13,7 @@ license.workspace = true
 array-bytes = { version = "6.2.2", default-features = false }
 codec = { version = "3.7.5", default-features = false, package = "parity-scale-codec" }
 polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false, features = [
+	"pallet-aura",
 	"pallet-balances",
 	"pallet-revive",
 	"pallet-sudo",
@@ -21,19 +22,17 @@ polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch 
 	"pallet-transaction-payment-rpc-runtime-api",
 	"parachains-common",
 	"runtime",
+	"sp-consensus-aura",
 	"with-tracing",
 ] }
 scale-info = { version = "2.11.6", default-features = false }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 
 [build-dependencies]
-polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false, optional = true, features = ["substrate-wasm-builder"] }
+polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false, optional = true, features = [
+	"substrate-wasm-builder",
+] }
 
 [features]
 default = ["std"]
-std = [
-	"codec/std",
-	"polkadot-sdk/std",
-	"scale-info/std",
-	"serde_json/std",
-]
+std = ["codec/std", "polkadot-sdk/std", "scale-info/std", "serde_json/std"]
