--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -112,4 +112,5 @@ jobs:
           SVM_TARGET_PLATFORM: ${{ matrix.svm_target_platform }}
           HTTP_ARCHIVE_URLS: ${{ secrets.HTTP_ARCHIVE_URLS }}
           WS_ARCHIVE_URLS: ${{ secrets.WS_ARCHIVE_URLS }}
+          ETHERSCAN_KEY: ${{ secrets.ETHERSCAN_API_KEY }}
         run: cargo nextest run ${{ matrix.flags }}
