--- a/crates/wallets/Cargo.toml
+++ b/crates/wallets/Cargo.toml
@@ -25,12 +25,22 @@ alloy-consensus.workspace = true
 alloy-sol-types.workspace = true
 alloy-dyn-abi.workspace = true
 
+# browser wallet
+alloy-rpc-types.workspace = true
+axum.workspace = true
+foundry-common.workspace = true
+tokio = { workspace = true, features = ["macros"] }
+parking_lot.workspace = true
+uuid.workspace = true
+webbrowser = "1.0.6"
+
 # aws-kms
 alloy-signer-aws = { workspace = true, features = ["eip712"], optional = true }
 aws-config = { version = "1", default-features = true, optional = true }
 
 # gcp-kms
 alloy-signer-gcp = { workspace = true, features = ["eip712"], optional = true }
+
 
 async-trait.workspace = true
 clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
