--- a/crates/wallets/Cargo.toml
+++ b/crates/wallets/Cargo.toml
@@ -31,6 +31,7 @@ axum.workspace = true
 foundry-common.workspace = true
 tokio = { workspace = true, features = ["macros"] }
 parking_lot.workspace = true
+serde_json.workspace = true
 uuid.workspace = true
 webbrowser = "1.0.6"
 
