harden CSP, inject session token into JS, define 0 cache policy

--- a/crates/wallets/Cargo.toml
+++ b/crates/wallets/Cargo.toml
@@ -48,6 +48,8 @@ eyre.workspace = true
 rpassword = "7"
 serde.workspace = true
 thiserror.workspace = true
+tower.workspace = true
+tower-http = { workspace = true, features = ["cors", "set-header"] }
 tracing.workspace = true
 eth-keystore = "0.5.0"
 
