--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -154,8 +154,10 @@ jobs:
 
       - name: cross setup
         if: contains(matrix.target, 'musl')
-        run: |
-          cargo install cross --git https://github.com/cross-rs/cross --rev baf457efc2555225af47963475bd70e8d2f5993f
+        uses: taiki-e/cache-cargo-install-action@7447f04c51f2ba27ca35e7f1e28fab848c5b3ba7 # v2
+        with:
+          git: https://github.com/cross-rs/cross
+          rev: baf457efc2555225af47963475bd70e8d2f5993f
 
       - name: Build binaries
         env:
