feat: warn on soldeer.lock revision mismatch during build

--- a/crates/forge/Cargo.toml
+++ b/crates/forge/Cargo.toml
@@ -79,6 +79,7 @@ solar.workspace = true
 strum = { workspace = true, features = ["derive"] }
 thiserror.workspace = true
 tokio = { workspace = true, features = ["time"] }
+toml.workspace = true
 toml_edit.workspace = true
 watchexec = "8.0"
 watchexec-events = "6.0"
