chore: add `TARGET_TOOL` in postinstall script

--- a/npm/@foundry-rs/anvil/package.json
+++ b/npm/@foundry-rs/anvil/package.json
@@ -12,7 +12,7 @@
     "dist"
   ],
   "scripts": {
-    "postinstall": "node ./dist/postinstall.mjs"
+    "postinstall": "TARGET_TOOL=anvil node ./dist/postinstall.mjs"
   },
   "optionalDependencies": {
     "@foundry-rs/anvil-darwin-arm64": "0.0.0",
