--- a/npm/@foundry-rs/cast/package.json
+++ b/npm/@foundry-rs/cast/package.json
@@ -12,7 +12,7 @@
     "dist"
   ],
   "scripts": {
-    "postinstall": "node ./dist/postinstall.mjs"
+    "postinstall": "TARGET_TOOL=cast node ./dist/postinstall.mjs"
   },
   "optionalDependencies": {
     "@foundry-rs/cast-darwin-arm64": "0.0.0",
