add signing flow

--- a/crates/wallets/Cargo.toml
+++ b/crates/wallets/Cargo.toml
@@ -29,6 +29,7 @@ alloy-dyn-abi.workspace = true
 alloy-rpc-types.workspace = true
 axum.workspace = true
 foundry-common.workspace = true
+serde_json.workspace = true
 tokio = { workspace = true, features = ["macros"] }
 parking_lot.workspace = true
 uuid.workspace = true
