forge: add remote trace source support (Cosmos-EVM), RemoteRpcExecutor, CLI --trace-source, tests, docs

--- a/crates/forge/Cargo.toml
+++ b/crates/forge/Cargo.toml
@@ -104,6 +104,7 @@ foundry-test-utils.workspace = true
 foundry-wallets.workspace = true
 futures.workspace = true
 reqwest = { workspace = true, features = ["json"] }
+httpmock = "0.7"
 
 mockall = "0.13"
 globset = "0.4"
