evm: enable alloy-provider debug-api and alloy-rpc-types trace features for RemoteRpcExecutor

--- a/crates/evm/evm/Cargo.toml
+++ b/crates/evm/evm/Cargo.toml
@@ -33,8 +33,8 @@ alloy-primitives = { workspace = true, features = [
     "arbitrary",
     "rlp",
 ] }
-alloy-rpc-types.workspace = true
-alloy-provider.workspace = true
+alloy-rpc-types = { workspace = true, features = ["trace"] }
+alloy-provider = { workspace = true, features = ["debug-api"] }
 alloy-serde.workspace = true
 alloy-sol-types.workspace = true
 revm = { workspace = true, default-features = false, features = [
